--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,9 @@ body {
 
 body::before {
   content: "";
-  position:fixed;
-  background: #040404 url("../img/background.jpg") top  no-repeat;
-  background-size:auto;
+  position:absolute;
+  background: #040404 url("../img/background.jpg") top right no-repeat;
+  background-size:cover;
   left: 0;
   right: 0;
   font-size: x-large;
