--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -921,18 +921,11 @@ margin-top: 5%;
   font-size:xx-large
 
 }
+  
+  
+@media (max-width: 768px) { /* Règles CSS pour les écrans de taille inférieure ou égale à 768px */ }
 
-  #brevet{
-  width: 32%;
-  
-}
 
-  #bac{
-  width: 30%;
-  
-} 
-  
-@media (max-width: 768px) { /* Règles CSS pour les écrans de taille inférieure ou égale à 768px */ 
-}
+
 
 
