--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -931,6 +931,11 @@ margin-top: 5%;
   width: 30%;
   
 } 
+
+  #chu{
+  width: 17%;
+     
+}
   
   
 @media (max-width: 768px) { /* Règles CSS pour les écrans de taille inférieure ou égale à 768px */ }
