--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -899,13 +899,39 @@ section .container {
 margin-top: 5%;
 }
 
-  #logophone{
+  #tel{
 
   width:17%
 
 }
 
-  #ldlc{
+  
+ #macdo{
+
+  width:17%
+
+}
+
+
+#cfai{
+
+  width:17%
+
+}
+
+#bonson{
+
+  width:17%
+
+}
+
+
+
+
+
+
+
+#ldlc{
 
   width:25%
 
@@ -933,7 +959,7 @@ margin-top: 5%;
 } 
 
    #chu{
-  width: 20%;
+  width: 17%;
 
 
 }
